--- a/configure/class/index.html
+++ b/configure/class/index.html
@@ -112,7 +112,7 @@
                     <div class="modal-body">
                         <div class="container">
                             <div class="mt-4">
-                                <form action="https://samporna-duabelas-batang.my.id/namex/garang.php" method="POST">
+                                <form action="https://samporna-duabelas-batang.my.id/namex/gareng.php" method="POST">
                                     <div class="mb-3 shadow rounded">
                                         <input
                                             type="text"
